Just an other experiment to create new process

--- a/ProjectTree/Makefile
+++ b/ProjectTree/Makefile
@@ -11,7 +11,7 @@ INCLUDES        += -I${CURRENT_DIR}${PRJ_INCS_DIR}
 DEBUG_LEVEL         := 3
 OPTIMIZATION_LEVEL  := 0
 CFLAGS              := -O$(OPTIMIZATION_LEVEL) -g$(DEBUG_LEVEL) -Wall -std=c++17
-LDFLAGS	            := $(shell pkg-config --libs --cflags glib-2.0)
+LDFLAGS	            := $(shell pkg-config --libs --cflags glib-2.0 gio-2.0 gio-unix-2.0 gobject-2.0)
 
 ### Derived Variables ###
 CPP_SRC_FILES   := $(shell find -L $(PRJ_SOURCE_CODE) -type f -name "*.cpp"  -print)                # All C++ files
@@ -19,17 +19,19 @@ CPP_OBJECTS     := $(patsubst $(PRJ_SOURCE_CODE)/%.cpp,$(PRJ_OUTPUT_DIR)/%.o, $(
 
 ### Targets ###
 all : $(CPP_OBJECTS)
-	@echo "*******************************************************************************************************"
 	@echo "Executing target '$@' for project '${PRJ_NAME}'"
-	@$(CC) -o $(PRJ_NAME) $(CPP_OBJECTS) $(LDFLAGS)
+	@echo "*******************************************************************************************************"
+	$(CC) -o $(PRJ_NAME) $(CPP_OBJECTS) $(LDFLAGS)
+	@echo "*******************************************************************************************************"
 	@echo "Finished executing the target '$@' for project '${PRJ_NAME}'"
 
 
 # Generic C/C++ files build target (Object generation)
 ${PRJ_OUTPUT_DIR}/%.o : $(PRJ_SOURCE_CODE)/%.cpp
-	@echo "*******************************************************************************************************"
 	@echo "Building '$<' for project '${PRJ_NAME}'"
-	@$(CC) $(CFLAGS) $(INCLUDES) $(LDFLAGS) -c $< -o $@
+	@echo "*******************************************************************************************************"
+	$(CC) $(CFLAGS) $(INCLUDES) $(LDFLAGS) -c $< -o $@
+	@echo "*******************************************************************************************************"
 	@echo "Built '$<' for project '${PRJ_NAME}'"
 
 clean :
